new changes after Prof recommandation

--- a/MasterThesis/Smart_Contract.tex
+++ b/MasterThesis/Smart_Contract.tex
@@ -30,7 +30,7 @@
           %note \\[1ex] is a line break in the title
 
 \author{Zahra Jafari \\
-Supervisor: Priv.-Doz. Dr. Anna Fense} 
+Supervisor: Prof. Dr. Anna Fense} 
 
 \college{Department of Computer Science \\
 Semantic Technology Institute Innsbruck}
@@ -79,7 +79,7 @@ Semantic Technology Institute Innsbruck}
 \include{appendix6}
 \include{appendix7}
 \include{appendix8}
-\bibliographystyle{apalike}
+\bibliographystyle{plainnat}
 \bibliography{biblio}
 %next line adds the Bibliography to the contents page
 \addcontentsline{toc}{chapter}{Bibliography}
@@ -89,4 +89,3 @@ Semantic Technology Institute Innsbruck}
 %\bibliographystyle{plain}  %use the plain bibliography style
 
 \end{document}
-
