--- a/MasterThesis/appendix8.tex
+++ b/MasterThesis/appendix8.tex
@@ -1,5 +1,5 @@
 
-\chapter{result of semantic mapping in RDF format}
+\chapter{Result of semantic mapping in RDF format}
 \begin{center}
 	\begin{figure}[htb!]
 		
