--- a/MasterThesis/introduction.tex
+++ b/MasterThesis/introduction.tex
@@ -1,13 +1,13 @@
 \section{Introduction}
-Distributed ledger on the blockchain has become the most popular in recent years. The features which make blockchain useful in cryptocurrency such as proof of consensus, secure transactions, and transparently - also make it suitable in many other contexts like healthcare, social, supply chain management, etc. \\
-Ethereum blockchain is one of the well-known ledgers which is capable to generate decentralized applications, and managing cryptocurrency using smart contracts. It has been the best platform for developers coding smart contracts in a decentralized paradigm to generate decentralized application DApp.
-A smart contract is a code written in a solidity program language, stored in blockchain, and executing some functionality out of blockchain based on the terms of the contract in the most trusted way. \\
-As blockchain has been widely used in diverse forms of data, the need of making queries over data, and index entries, become more important. The most important thing is integrating stored data on the blockchain with external resources, in other words, there is a need for linked data \cite{Third}. \\
+Distributed ledger on the blockchain has become the most popular in recent years \cite{Third}. The features which make blockchain useful in cryptocurrency such as proof of consensus, secure transactions, and transparently - also make it suitable in many other contexts like healthcare, social, supply chain management, etc. \\
+Ethereum blockchain is one of the well-known ledgers which is capable of generating decentralized applications, and managing cryptocurrency using smart contracts \cite{Third}. It is the platform for developers coding smart contracts in a decentralized paradigm to generate decentralized application DApp \cite{William}. 
+A smart contract is a code written in a solidity program language, stored in blockchain, and executing some functionality out of blockchain based on the terms of the contract in the most trusted way \cite{Third}. \\
+As distributed ledger like blockchian has been widely used in diverse type, the need of making queries over data, and index entries, becomes more important. The most important thing is integrating stored data on the blockchain with external resources, in other words, there is a need for linked data \cite{Third}. \\
 According to Tim-Berners-Lee (creator of the World Wide Web), 'linked data is the semantic web done right, and the web done right'\cite{Hector}. 
- The semantic web is a set of standards that enable access, integration, and query on data sources, and creates a variety of insight between different application domains. It uses ontology which represents Ethereum entities like blocks, and transactions to allow queries from the web using SPARQL and linking datasets \cite{Third}. \\
+ The semantic web is a set of standards that enable access, integration, and query on data sources, and creates a variety of insight between different application domains. It can also use ontology to represents Ethereum entities like blocks, and transactions to allow queries from the web using SPARQL and linking datasets \cite{Third}. \\
 In this thesis, we deal with some problems: First one is to find a method to integrate semantic licenses from the DALICC library into a smart contract. 
 DALICC stands for Data Licenses Clearance Center is a framework that supports automated clearance of rights to help detect license conflict and reduce the cost of high transactions related to manual clearance of licensing contents.
 It is developed and integrated into different functionalities that allow the automated clearance of rights issues \cite{Anna}.\\
-The second one is that licenses from DALICC are already connected to the blockchain, But it does not have a semantic representation of the records themselves. That's why, we used EthOn ontology to generate a semantic model, mapping this model with information retrieved from deployed smart contracts in RDF format. \\
-To address these issues in our thesis, we built up DApp to attach licenses to contents, then apply semantic web techniques linking extracted data from Ethereum transactions to related EthOn ontology concepts. \\
-In the first chapter, we described distributed ledger technology, blockchain, Ethereum, and some more details to have a better insight into the used technology. In the next chapter, we represented some works around how the semantic web can be applied to the blockchain. And on the last chapter, we presented DApp to show smart contract integration with the DALICC semantic licenses library and semantic representation of this deployment.
+The second one is that licenses from DALICC are already connected to the blockchain, But it does not have a semantic representation of the records themselves. Therefore, we used EthOn ontology\footnote{http://ethon.consensys.net/} to generate a semantic model, mapping this model with information retrieved from deployed smart contracts in RDF format. \\
+To address these issues in our thesis, we created a DApp adapted from previous work on a similar topic to attach licenses to contents\footnote{https://github.com/kilianhnt/dalicc-license-annotator}, then applied semantic web techniques linking extracted data from Ethereum transactions to related EthOn ontology concepts. \\
+In the first chapter, we described distributed ledger technology, blockchain, Ethereum, and some relevant details to have a better insight into the used technology. In the next chapter, we represented some works around how the semantic web can be applied to the blockchain. And on the last chapter, we presented DApp to show smart contract integration with the DALICC semantic licenses library and semantic representation of this deployment.
