--- a/MasterThesis/biblio.bib
+++ b/MasterThesis/biblio.bib
@@ -1,102 +1,100 @@
 
 @Article{Pablo,
-  title =        "{Scripting smart contracts
-                  for distributed ledger technology}",  
-  author =      "Pablo Lamela Seijas, Simon Thompson, Darryl McAdams",
-  volume =        "30",
-  year =         "2016",
-   month =        "12"
+  title = {Scripting smart contracts for distributed ledger technology},  
+  author = {Pablo Lamela Seijas {,} Simon Thompson and Darryl McAdams},
+  volume = 30,
+  year = 2016,
+   month = 12
   
 } 
 @Article{Matthew,
-	title =        "{Block Chain Technologies & The Semantic Web:
-	A Framework for Symbiotic Development}",  
-	author =      "Matthew English, Soeren Auer, and John Domingue",
-	volume =        "15",
-	year =         "2016"
+	title = {Block Chain Technologies and The Semantic Web:
+	A Framework for Symbiotic Development},  
+	author = {Matthew English{,} Soeren Auer{,} John Domingue},
+	volume = 15,
+	year = 2016
 
 }, 
 
 @review{Christidis,
-	author={Konstantinos Christidis, Michael Devetsikiotis},
+	author={Konstantinos Christidis{,} Michael Devetsikiotis},
 	title = {Blockchains and Smart Contracts for
 	the Internet of Things},
-	journal = {SPECIAL SECTION ON THE PLETHORA OF RESEARCH IN INTERNET OF THINGS (IoT)},
-	volume = {12},
-	year = {2016},
-    month = {3} 
+	journal = {Spacial section on the plethora of research in internet of thing (IoT)},
+	volume = 12,
+	year = 2016,
+    month = 3 
 },
 
 @article{Valentina,
-	author  = {Valentina Gatteschi, Fabrizio Lamberti, Claudio Demartini, Chiara Pranteda and Victor Santamaria}, 
-	title   = {Blockchain and Smart Contracts for Insurance: Is the
+	author = {Valentina Gatteschi{,} Fabrizio Lamberti{,} Claudio Demartini{,} Chiara Pranteda{,} and Victor Santamaria}, 
+	title  = {Blockchain and Smart Contracts for Insurance: Is the
 	Technology Mature Enough?},
 	journal = {The name of the journal},
-	year    = 2018, 
+	year = 2018, 
 	volume  = 16 ,
-	month   = 12
+	month = 12
 },
 
 @article{Ruta,
-	author  = {Michele Ruta, Floriano Scioscia, Saverio Ieva,
-	Giovanna Capurso, Agnese Pinto, and Eugenio Di Sciascio}, 
-	title   = {A Blockchain Infrastructure for the Semantic
+	author = {Michele Ruta{,} Floriano Scioscia{,} Saverio Ieva{,}
+	Giovanna Capurso{,} Agnese Pinto{,} and Eugenio Di Sciascio}, 
+	title = {A Blockchain Infrastructure for the Semantic
 	Web of Things},
-	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"} 
-	volume  = 12,
+	url = {http://ceur-ws.org/Vol-2161/paper6.pdf},
+	volume = 12,
 	month = 1,
 	year = 2018 
 },
 
 @article{Hex,
-	author  = {Lin William Congy, Zhiguo Hex}, 
-	title   = {Blockchain Disruption and Smart Contracts},
-	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"} 
-	volume  = 12,
+	author = {Lin William Congy{,} Zhiguo Hex}, 
+	title  = {Blockchain Disruption and Smart Contracts},
+	url = {http://ceur-ws.org/Vol-2161/paper6.pdf}, 
+	volume = 12,
 	month = 2,
 	year = 2018
 },
 
 @article{Vitalik,
-	author  = {Vitalik Buterin}, 
-	title   = {A Next generation smart contract & decentrlized application platform},
-	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"} 
-	volume  = 36,
-	url =  {"http://blockchainlab.com/pdf/Ethereum_white_paper-a_next_generation_smart_contract_and_decentralized_application_platform-vitalik-buterin.pdf"}, 
+	author = {Vitalik Buterin}, 
+	title = {A Next generation smart contract & decentrlized application platform},
+	volume = 36,
+	url = {http://blockchainlab.com/pdf/Ethereum_white_paper-a_next_generation_smart_contract_and_decentralized_application_platform-vitalik-buterin.pdf}, 
 	month = 2,
 	year = 2018
 },
 
 @article{Wesley,
-	author  = {Wesley Egbertsen, Gerdinand Hardeman, Maarten van den Hoven, Gert van der Kolk and Arthur van Rijsewijk}, 
-	title   = {Replacing Paper Contracts With Ethereum
+	author = {Wesley Egbertsen{,} Gerdinand Hardeman{,} Maarten van den Hoven{,} Gert van der Kolk and Arthur van Rijsewijk}, 
+	title = {Replacing Paper Contracts With Ethereum
 	Smart Contracts},
-	url =  {"https://allquantor.at/blockchainbib/pdf/egbertsen2016replacing.pdf"}, 
+	url =  {https://allquantor.at/blockchainbib/pdf/egbertsen2016replacing.pdf}, 
 	volume = 35, 
 	month = 12,
 	year = 2016
 },
 
 @article{Hector,
-	author  = {Hector Ugarte }, 
-	title   = {A more pragmatic Web 3.0: Linked Blockchain Data},
-	url = {"https://semanticblocks.files.wordpress.com/2017/03/linked_blockchain_paper_final.pdf"}, 
-	DOI= {10.13140/RG.2.2.10304.12807/1}
+	author = {Hector Ugarte}, 
+	title = {A more pragmatic Web 3.0: Linked Blockchain Data},
+	url = {https://semanticblocks.files.wordpress.com/2017/03/linked_blockchain_paper_final.pdf}, 
+	doi= {10.13140/RG.2.2.10304.12807/1},
 	volume = 15, 
 	month = 1,
 	year = 2017
 },
 
-@article{Ugarte,
-	author  = {Jose Luis Romero Ugarte}, 
-	title   = {Distributed ledger technology},
+@article{Jose,
+	author = {Jose Luis Romero Ugarte}, 
+	title = {Distributed ledger technology},
 	volume = 11, 
 	month = 11,
 	year = 2018
 },
 @article{Kalra,
-	author  = {Sukrit Kalra, Seep Goel, Mohan Dhawan, Subodh Sharma},  
-	title   = {ZEUS: Analyzing Safety of Smart Contracts},
+	author = {Sukrit Kalra{,} Seep Goel{,} Mohan Dhawan{,} Subodh Sharma},  
+	title = {ZEUS: Analyzing Safety of Smart Contracts},
 	url = {http://dx.doi.org/10.14722/ndss.2018.23082}, 
 	volume = 15, 
 	month = 2,
@@ -104,8 +102,8 @@
 },
 
 @review{Panarello,
-	author  = {Alfonso Panarello, Nachiket Tapas, Giovanni Merlino, Francesco Longo and Antonio Puliafito},  
-	title   = {Blockchain and IoT Integration: A Systematic Survey},
+	author = {Alfonso Panarello{,} Nachiket Tapas{,} Giovanni Merlino{,} Francesco Longo and Antonio Puliafito},  
+	title = {Blockchain and IoT Integration: A Systematic Survey},
 	url = {https://arxiv.org/pdf/1906.00245}, 
 	volume = 37, 
 	month = 8,
@@ -113,271 +111,252 @@
 },
 
 @article{Bachler,
-	author  = {Allan Third, Kevin Quick, Michelle Bachler, John Domingue},  
-	title   = {Benchmarking LinkChains: Performance of
+	author = {Allan Third{,} Kevin Quick{,} Michelle Bachler{,} John Domingue},  
+	title = {Benchmarking LinkChains: Performance of
 	Blockchain-backed Trustworthy Linked Data},
 	url = {https://pdfs.semanticscholar.org/ffae/f7f3604fb4e97a39b9032928b47fa422099c.pdf}, 
 	volume = 12 
 
 },
 @article{Grishchenko,
-	author  = {Ilya Grishchenko, Matteo Maffei, and Clara Schneidewind},  
-	title   = {Foundations and Tools for the Static Analysis
+	author = {Ilya Grishchenko{,} Matteo Maffei{,} and Clara Schneidewind},  
+	title = {Foundations and Tools for the Static Analysis
 	of Ethereum smart contracts},
-	url = { https://www.netidee.at/sites/default/files/2018-07/cav2018.pdf}, 
+	url = {https://www.netidee.at/sites/default/files/2018-07/cav2018.pdf}, 
 	volume = 25,
-	year   = 2018 	
+	year = 2018 	
 },
 @article{Rashid,
- 	author  = {Umar Rashid, Allan Third, John Domingue},  
- 	title   = {Web Service for Semantic Negotiation of Smart Contracts},
- 	url = {  https://openreview.net/forum?id=BJg2gCu1e7}, 
+ 	author = {Umar Rashid{,} Allan Third{,} John Domingue},  
+ 	title = {Web Service for Semantic Negotiation of Smart Contracts},
+ 	url = {https://openreview.net/forum?id=BJg2gCu1e7}, 
  	volume = 6,
- 	year   = 2018,
+ 	year = 2018,
  	month = 1 	
  },
 
 @conference{Sopek,
-	author       = {Mirek Sopek, Przemysław Grądzki, Witold Kosowski , Dominik Kozuski, Rafa Troczak, Robert Trypuz}, 
-	title        = {
-	WWW '18 Companion Proceedings of the The Web Conference 2018},
+	author = {Mirek Sopek{,} Przemyslaw Gradzki{,} Witold Kosowski {,} Dominik Kozuski{,} Rafa Troczak{,} Robert Trypuz}, 
+	title = {Companion Proceedings of the The Web Conference 2018},
 	
-	booktitle    = {GraphChain – A Distributed Database with Explicit Semantics and Chained RDF Graphs},
-	year         = 2018,
-	volume       = 8,
-	month        = 5,
-	year         = {https://doi.org/10.1145/3184558.3191554},
-	page         = {1171-1178},
-	DOI          = {10.1145/3184558.3191554}   
+	booktitle = {GraphChain – A Distributed Database with Explicit Semantics and Chained RDF Graphs},
+	year = 2018,
+	volume = 8,
+	month = 5,
+	year = {https://doi.org/10.1145/3184558.3191554},
+	page = {1171-1178},
+	doi = {10.1145/3184558.3191554}   
 },
 
 @conference{Third,
-	author       = {Allan Third, John Domingue}, 
-	title        = {Linked Data Indexing of Distributed Ledgers},
+	author = {Allan Third{,} John Domingue}, 
+	title = {Linked Data Indexing of Distributed Ledgers},
 	
-	booktitle    = {WWW 17 Companion Proceedings of the 26th International Conference on World Wide Web Companion },
-	year         = 2017,
-	volume       = 8,
-	month        = 5,
-	page         = {1431-1436},
-	DOI          = {10.1145/3041021.3053895}   
+	booktitle = {Companion Proceedings of the 26th International Conference on World Wide Web Companion },
+	year = 2017,
+	volume = 8,
+	month = 5,
+	page = {1431-1436},
+	doi = {10.1145/3041021.3053895}   
 },
 
 @article{Zdun,
-	author  = {Maximilian Wöhrer and Uwe Zdun},  
-	title   = {Smart Contracts: Security Patterns in the Ethereum
+	author = {Maximilian Wöhrer and Uwe Zdun},  
+	title = {Smart Contracts: Securlty Patterns in the Ethereum
 	Ecosystem and Solidity},
 	url = {  https://eprints.cs.univie.ac.at/5433/7/sanerws18iwbosemain-id1-p-380f58e-35576-preprint.pdf.}, 
 	volume = 7,
-	year   = 2018,
+	year = 2018,
  	
 },
 
-@article{John,
-	author  = {Third, Allan; Tiddi, Ilaria; Bastianelli, Emanuele; Valentine, Chris and Domingue, John},  
-	title   = {Towards the Temporal Streaming of Graph Data on
-	Distributed Ledgers},
-	url = {http://dx.doi.org/doi:10.1007/978-3-319-70407-441}, 
-	volume = 7,
-	year   = 2017,
-	pages = 327–332
-	
-},
-@article{Florian,
-	author  = {Florian Idelberger, Guido Governatori, Regis Riveret, Giovanni Sartor},  
-	title   = {Evaluation of Logic-Based Smart Contracts for
-	Blockchain Systems},
-	url = { https://research.csiro.au/data61/wp-content/uploads/sites/85/2016/08/ruleml16.pdf.}, 
-	volume = 15,
-	year   = 2016,
-	month  = 8 
-
-},
 @article{Baqa, 
-
-author  = {Hamza Baqa, Nguyen B. Truongy, Noel Crespi, Gyu Myoung Leex, Franck Le Gall},  
-title   = {Semantic Smart Contracts for Blockchain-based
+author = {Hamza Baqa{,} Nguyen B.Truongy{,} Noel Crespi{,} Gyu Myoung Leex{,} Franck Le Gall},  
+title = {Semantic Smart Contracts for Blockchain-based
 Services in the Internet of Things},
 url = {http://researchonline.ljmu.ac.uk/id/eprint/11315/}, 
 volume = 5,
-year   = 2019,
+year = 2019,
 
 },
 
-@Masterthesis{Markos, 	
-	author  = {Kalimeris Markos},  
-	title   = {Indexes for Blockchain Data},
+@masterthesis{Markos, 	
+	author = {Kalimeris Markos},  
+	title = {Indexes for Blockchain Data},
 	volume = 102,
-	year   = 2019,
-	month  = 2
+	year = 2019,
+	month = 2
 	
 },
-@BOOK{DLT,
-  TITLE = {Distributed Ledger Technology(DLT) and Blockchain},
-  AUTHOR = {World Bank Group},
-  YEAR = {2017},
-  PUBLISHER = {World Bank Group},
+@book{Natarajan,
+  title = {Distributed Ledger Technology(DLT) and Blockchain},
+  author = {Natarajan{,} Harish{,} Krause{,} Solvej{,} Gradstein{,} Helen},
+  year = {2017},
+  publisher = {World Bank Group},
 },
 
-@BOOK{Gupta,
-  TITLE = {Blockchain for dummies},
-  AUTHOR = {Manav Gupta},
-  YEAR = {2018},
-  PUBLISHER = {John Wiley},
+@book{Gupta,
+  title = {Blockchain for dummies},
+  author = {Manav Gupta},
+  year = {2018},
+  publisher = {John Wiley},
 },
 @article{Coyla, 
-author  = {Karen Coyle},  
-title   = {Semantic Web and Linked Data},
+author = {Karen Coyle},  
+title = {Semantic Web and Linked Data},
 url = {https://journals.ala.org/ltr/article/view/4669/5539}, 
 volume = 5,
-year   = 2012,
+year = 2012,
+
+},
+@article{Kujur, 
+author = {Bijoy Chhetrin{,} Pranay Kujur},  
+title = {Evolution of World Wide Web},
+url = {https://www.researchgate.net/publication/280944777}, 
+volume = 6,
+year = 2015,
 
 },
 
 @article{Luke, 
-author  = {Max Luke, Anna Dimitrova, Stephen James Lee, Zdenek Pekarek},  
-title   = {Blockchain in Electricity: a Critical Review of Progress to Date},
+author = {Max Luke{,} Anna Dimitrova{,} Stephen James Lee{,} Zdenek Pekarek},  
+title = {Blockchain in Electricity: a Critical Review of Progress to Date},
 url = {https://www.researchgate.net/publication/332138382}, 
 volume = 38,
-year   = 2018,
+year = 2018,
 
 },
 @article{Aithal, 
-author  = {P.K. Paul1, P.S. Aithal, Ricardo Saavedra and Surajit Ghosh},  
-title   = {Blockchain Technology and its Types},
+author = {P.K. Paul{,} P.S. Aithal{,} Ricardo Saavedra{,} Surajit Ghosh}, title = {Blockchain Technology and its Types},
 url = {https://www.researchgate.net/publication/359051731}, 
 volume = 13,
-year   = 2021,
+year = 2021,
 
 },
 @article{Dilhara, 
-author  = {Shashie Dilhara},  
-title   = {A Review on Application of Hash Functions and Digital signatures in the
+author = {Shashie Dilhara},  
+title = {A Review on Application of Hash Functions and Digital signatures in the
 Blockchain Industry},
 url = {https://www.researchgate.net/publication/354700341}, 
 volume = 5,
-year   = 2021,
+year = 2021,
 
 },
 @article{William, 
-author  = {William Metcalfe},  
-title   = {Ethereum, Smart Contracts, DApps},
+author = {William Metcalfe},  
+title = {Ethereum, Smart Contracts, DApps},
 url = {https://doi.org/10.1007/978-981-15-3376-1_5}, 
 volume = 17,
-year   = 2020,
+year = 2020,
 
 },
 @article{Payrott, 
-author  = {Sebastian Payrott},  
-title   = {introduction to Ethereum and Smart Contracts},
+author = {Sebastian Payrott},  
+title = {introduction to Ethereum and Smart Contracts},
 url = {https://auth0.com/blog/an-introduction-to-ethereum-and-smart-contracts-part-2/}, 
 volume = 68,
-year   = 2017,
+year = 2017,
 
 },
 
 @article{Tassilo, 
-author  = {Tassilo Pellegrini},  
-title   = {Detecting Licensing Conflicts with DALICC},
+author = {Tassilo Pellegrini},  
+title = {Detecting Licensing Conflicts with DALICC},
 url = {http://ffhoarep.fh-ooe.at/bitstream/123456789/1025/1/Panel_120_ID_193.pdf}, 
 volume = 5,
-year   = 2017,
+year = 2017,
 
 },
 @article{Anna, 
-author  = {Tassilo Pellegrini, Simon Steyskal, Oleksandra Panasiuk, Anna Fensel},  
-title   = {Automated Rights Clearance Using Semantic Web Technologies},
-DOI = {DOI: 10.1007/978-3-662-55433-3_14}, 
+author = {Anna Fensel{,} Tassilo Pellegrini{,} Simon Steyskal{,} Oleksandra Panasiuk},  
+title = {Automated Rights Clearance Using Semantic Web Technologies},
+year = 2018,
 volume = 16,
-year   = 2018,
+doi = {10.1007/978-3-662-55433-3_14}, 
 
 },
-@article{Fips, 
-Author  = {FIPS 202 },  
-title   = {SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions },
-DOI = {http://dx.doi.org/10.6028/NIST.FIPS.202}, 
+@article{Dworkin, 
+Author = {Morris J.Dworkin},  
+title = {SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions },
+doi = {http://dx.doi.org/10.6028/NIST.FIPS.202}, 
+url = {https://www.nist.gov/publications/sha-3-standard-permutation-based-hash-and-extendable-output-functions},
 volume = 37,
-year   = 2015,
+year = 2015,
 
 },
 @article{Ozsu, 
-	author  = {Tamer Özsu},  
-	title   = {Distrubuted database systems},
-	Url = {https://www.researchgate.net/publication/228806512_Distributed_Database_Systems}, 
+	author = {Tamer Özsu},  
+	title = {Distrubuted database systems},
+	url = {https://www.researchgate.net/publication/228806512_Distributed_Database_Systems}, 
 	volume = 25,
-	year   = 2002,
+	year = 2002,
 	
 },
 @article{Ilya, 
-	author  = {Ilya Grishchenko, Matteo Maffei, and Clara Schneidewind},  
-	title   = {A Semantic Framework for the Security Analysis of Ethereum Smart Contracts},
-	DOI = {https://doi.org/10.1007/978-3-319-89722-6_10}, 
+	author = {Ilya Grishchenko{,} Matteo Maffei{,} and Clara Schneidewind},  
+	title = {A Semantic Framework for the Securlty Analysis of Ethereum Smart Contracts},
+	doi = {https://doi.org/10.1007/978-3-319-89722-6_10}, 
 	volume = 27,
-	year   = 2018,
+	year = 2018,
 	
 },
 @article{Egbertsen, 
-	author  = {Wesley Egbertsen, Gerdinand Hardeman, Maarten van den Hoven, Gert van der Kolk and Arthur van ijsewijk},  
-	title   = {Replacing Paper Contracts With Ethereum Smart Contracts Contract Innovation with Ethereum},
-	Url = {https://allquantor.at/blockchainbib/pdf/egbertsen2016replacing.pdf}, 
+	author = {Wesley Egbertsen{,} Gerdinand Hardeman{,} Maarten van den Hoven{,} Gert van der Kolk and Arthur van ijsewijk},  
+	title = {Replacing Paper Contracts With Ethereum Smart Contracts Contract Innovation with Ethereum},
+	url = {https://allquantor.at/blockchainbib/pdf/egbertsen2016replacing.pdf}, 
 	volume = 35,
-	year   = 2016,
+	year = 2016,
 	
 },
 @article{Gavin, 
-	author  = {DR.GAVIN WOOD},  
-	title   = {ETHEREUM: A SECURE DECENTRALISED GENERALISED TRANSACTION LEDGER},
-	Url = {https://gavwood.com/paper.pdf}, 
+	author = {DR.Gavin Wood},  
+	title = {Ethereum: A secure decentralized generalised transaction ledger},
+	url = {https://gavwood.com/paper.pdf}, 
 	volume = 34,
-	year   = 2017,
+	year = 2017,
 	
 },
 @article{Kim, 
-	author  = {Henry M. Kim | Marek Laskowski},  
-	title   = {Toward an ontology‐driven blockchain design for supply‐chain provenance},
-	DOI = {DOI: 10.1002/isaf.1424}, 
+	author = {Henry M. Kim{,} Marek Laskowski},  
+	title = {Toward an ontology‐driven blockchain design for supply‐chain provenance},
+	doi = {doi: 10.1002/isaf.1424}, 
 	volume = 18,
-	year   = 2018,
+	year = 2018,
 	
 },
-
 @article{Baran, 
-	author  = {Paul Baran},  
-	title   = {On distributed networks},
-	Url = {https://web.stanford.edu/class/cs244/papers/DistributedCommunicationsNetworks.pdf}, 
+	author = {Paul Baran},  
+	title = {On distributed networks},
+	url = {https://web.stanford.edu/class/cs244/papers/DistributedCommunicationsNetworks.pdf}, 
 	volume = 51,
-	year   = 1964,
+	year = 1964,
 	
 },
 @article{Masood, 
-	author  = {Faraz Masood},  
-	title   = {An Overview of Distributed Ledger Technology and its Applications},
-	DOI = {10.26438/ijcse/v6i10.422427}, 
+	author = {Faraz Masood},  
+	title = {An Overview of Distributed Ledger Technology and its Applications},
+	doi = {10.26438/ijcse/v6i10.422427}, 
 	volume = 7,
-	year   = 2018,
+	year = 2018,
 	
 },
 @article{Szabo, 
-	author  = {Nick Szabo},  
-	title   = {Smart Contracts: Building Blocks for Digital Markets},
-	Url = {http://www.truevaluemetrics.org/DBpdfs/BlockChain/Nick-Szabo-Smart-Contracts-Building-Blocks-for-Digital-Markets-1996-14591.pdf}, 
+	author = {Nick Szabo},  
+	title = {Smart Contracts: Building Blocks for Digital Markets},
+	url = {http://www.truevaluemetrics.org/DBpdfs/BlockChain/Nick-Szabo-Smart-Contracts-Building-Blocks-for-Digital-Markets-1996-14591.pdf}, 
 	volume = 11,
-	year   = 2018,
+	year = 2018,
 	
 },
 @article{Tim, 
-	author  = {Christian Bizer, Freie Universität Berlin, Germany Tom Heath,Talis Information Ltd, United Kingdom Tim Berners-Lee, Massachusetts Institute of Technology, USA},  
-	title   = {Linked Data - The Story So Far},
-	DOI = {10.4018/jswis.2009081901 · Source: OAI}, 
+	author = {Christian Bizer{,} Freie Universitat Berlin{,} Germany Tom Heath{,} Talis Information Ltd{,} United Kingdom Tim Berners-Lee{,} Massachusetts Institute of Technology{,} USA},  
+	title = {Linked Data - The Story So Far},
+	doi = {10.4018/jswis.2009081901 · Source: OAI}, 
 	volume = 27,
-	year   = 2009,
+	year = 2009,
+	
 },
 
-@article{Chhetri, 
-author  = {Bijoy Chhetri},  
-title   = {Evolution of World Wide Web},
-url = {https://www.researchgate.net/publication/280944777}, 
-volume = 6,
-year   = 2015,
 
-},
+
+
