--- a/MasterThesis/chapter3.tex
+++ b/MasterThesis/chapter3.tex
@@ -1,23 +1,27 @@
 \chapter{DALICC}
-\section{DALICC}
-According to Pellegrini \cite{Tassilo}, DALICC stands for Data Licenses Clearance Center. It is a software framework that helps people to legally secure data from a third party and help to detect licensing conflicts and reduce the costs of rights clearance by enabling automated clearance right in the creation of derivative works \cite{Tassilo}. 
-\subsection{DALICC Requirements}
-The following requirements would be addressed by the DALICC framework:\\
+According to Pellegrini \cite{Tassilo}, DALICC stands for Data Licenses Clearance Center. It is a software framework that helps people legally secure data from a third party, detect licensing conflicts, and reduce the costs of rights clearance by enabling automated clearance rights in the creation of derivative works \cite{Tassilo}. \\
+\\
+\textbf{Rights Expression Language (RELs)} are used to explain machine-readable form of rights for access management and digital asset. The most popular  several RELs vocabularies  such as MPEG-21, ODRL-2.0, ccREL, XACML and WAC that serve the rights management in different areas like data licensing, application, etc\cite{Anna}.\\
+\\
+\section{DALICC Requirements}
+\\
+The following requirements would be addressed by the DALICC framework: \\
 \begin{itemize}
-	\item \textit{Tackling license heterogeneity:} \\
-	It is possible to combine the various contents which have the same license with different names. But that would be much more difficult to license the resultant of the combined contents. To solve this issue, DALICC provides a set of machine-readable representations of licenses that allow us to compare licenses to each other to identify the equivalent licenses. It guides the user to possible conflicts of various combined licenses.
-	\item \textit{Tackling REL heterogeneity:} \\
-	Combing licenses are simple if they are expressed through the same RELs. But, it is difficult to compare licenses that have been represented by different RELs.\\
-	DALICC resolves this problem, by representing RELs based on the semantic web and mapping the terms to each other. It will represent exiting RELs based on W3C-approved standards, thus allowing mapping between various RELs to be created.
-	\item \textit{Compatibility check, conflict detection and neutrality of the rules:} \\
-	It is difficult to be sure the meaning of the different terms in semantics is aligned. These problems result from indicating the classes, instances, and properties which can not be handled just by mapping.\\
-	This is where DALICC comes to play and helps the user with a workflow that defines the usage context, then gathers additional information to detect conflicts and ambiguous concepts. Based on this information, DALICC makes reasoning over the set of licenses and infers the instruction to the user on how to process with license processing.\\
-	\item \textit{Legal validity of representations and machine recommendations:} \\
-	According to Anna Fensel et al.\cite{Anna}, The semantic complexity of licensing issues means that the semantics of RELs must be aligned within the specific application scenario. This includes a correct interpretation of the various national legislation according to the country of origin of a jurisdiction (i.e. German Urheberrecht vs. US copyright), the resolution of problems that are derived from multilingual, and the consideration of existing case law in the resolution of licensing conflicts \cite{Anna}.\\
-	To solve this problem, DALICC will check the legal validity of machine-readable licenses and the compatibility of reasoning engine output with the law. DALICC output will be tested against the law and checked the semantic precision derived from different languages and adjusted them \cite{Anna}.
+\item \textit{Tackling license heterogeneity:} \\
+It is possible to combine the various contents that have the same license with different names. But that would make it much more difficult to license the result of the combined contents. To solve this issue, DALICC provides a set of machine-readable representations of licenses that allow us to compare licenses to each other to identify the equivalent licenses. It guides the user to possible conflicts between various combined licenses.
+\item \textit{Tackling REL heterogeneity:} \\
+Combining licenses is simple if they are expressed through the same RELs. But it is difficult to compare licenses that have been represented by different RELs. \\
+DALICC resolves this problem by representing RELs based on the semantic web and mapping the terms to each other. It will represent exiting RELs based on W3C-approved standards, thus allowing mapping between various RELs to be created.
+\item \textit{Compatibility check, conflict detection, and neutrality of the rules:} \\
+It is difficult to be sure the meaning of the different terms in semantics is aligned. These problems result from indicating the classes, instances, and properties, which cannot be handled just by mapping. \\
+This is where DALICC comes into play and helps the user with a workflow that defines the usage context and then gathers additional information to detect conflicts and ambiguous concepts. Based on this information, DALICC makes reasoning over the set of licenses and infers instructions to the user on how to process the license processing. \\
+\item \textit{Legal validity of representations and machine recommendations:} \\
+According to Anna Fensel et al. \cite{Anna}, the semantic complexity of licensing issues means that the semantics of RELs must be aligned within the specific application scenario. This includes a correct interpretation of the various national legislation according to the country of origin of a jurisdiction (i.e., German Urheberrecht vs. US copyright), the resolution of problems that are derived from multilingual, and the consideration of existing case law in the resolution of licensing conflicts \cite{Anna}.\\
+To solve this problem, DALICC will check the legal validity of machine-readable licenses and the compatibility of reasoning engine output with the law. DALICC output will be tested against the law, checked for semantic precision derived from different languages, and adjusted accordingly \cite{Anna}.
 	
 \end{itemize}
-\subsection{DALICC Software Architecture}
+\\
+\section{DALICC Software Architecture}
 To address the above challenges DALICC framework consists of four components:\\
 \begin{itemize}
 	\item \textbf{License composer} is a tool that allowed the license to be created from a set of questions that are mapped to ODRL, ccREL, and the DALICC vocabularies and concepts.
